# lunisolar

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  version_badge.json
.github/workflows/: ci.yaml  release.yaml  update-version.yaml
docs/: api.md
examples/: birthdays.cpp  solar_terms.cpp
include/: lunisolar.h
scripts/: gen_version_badge.py
tests/: test_lunisolar.cpp
tools/: calendar_source.py  gen_lunisolar_data.py  gen_lunisolar_data.sh  sxtwl_source.py
